--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@pitcher/js-api": "beta",
+    "@pitcher/js-api": "^1.22.0-beta.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
