--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@pitcher/js-api": "^1.22.0-beta.2",
+    "@pitcher/js-api": "^1.22.0-beta.6",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -19,6 +20,7 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -26,7 +28,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
-    "react-day-picker": "9.0.8",
+    "react-day-picker": "8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "tailwind-merge": "^2.5.2",
@@ -55,5 +57,5 @@
     "typescript": "^5.5.4",
     "vite": "^5.4.0"
   },
-  "packageManager": "yarn@4.4.0"
+  "packageManager": "yarn@4.4.1"
 }
